--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Sen:wght@400..800&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Sen:wght@400..800&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -46,10 +47,44 @@
                 </ul>
             </div>
             <!-- Welcome w/ Name -->
-            <div class="text-center">
-
-                <p class="mb-0">
-                    <i class="bi bi-bell-fill me-5"></i>
+            <div class="text-center d-flex align-items-center justify-content-center">
+                <!-- Dropdown -->
+                <div class="dropdown">
+                    <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="position-relative">
+                            <i class="bi bi-bell-fill"></i>
+                            <!-- Notification Dot -->
+                            <span class="notification-dot"></span>
+                        </span>
+                    </button>
+                    <div class="dropdown dropdown-hover">
+                        <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
+                            <li class="dropdown-header d-flex align-items-center">
+                                <i class="bi bi-bell-fill me-2"></i> Notifications
+                            </li>
+                            <li style="max-height: 150px; min-width: 200px; overflow-y: auto;">
+                                <ul id="notification-list" class="list-unstyled px-2 mb-0">
+                                    <!-- Notifications will be added dynamically here -->
+                                    <li>Notification 1</li>
+                                    <li>Notification 2</li>
+                                    <li>Notification 3</li>
+                                    <li>Notification 4</li>
+                                    <li>Notification 5</li>
+                                    <li>Notification 6</li>
+                                    <li>Notification 6</li>
+                                    <li>Notification 7</li>
+                                    <li>Notification 8</li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-divider"></li>
+                            <li class="d-flex justify-content-end px-2">
+                                <button class="btn btn-sm btn-light border" id="clear-notifications">Clear</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="ms-5 mb-0">
                     Welcome, {{ name }}
                     <i class="bi bi-person-fill"></i>
                 </p>
@@ -69,19 +104,22 @@
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li>
-                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                            <a href="#"
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
                                 <i class="bi bi-filter-circle me-2"></i>
                                 Filters
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                            <a href="#"
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
                                 <i class="bi bi-wrench me-2"></i>
                                 Tools
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                            <a href="#"
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
                                 <i class="bi bi-pencil-fill me-2"></i>
                                 Request Change
                             </a>
@@ -110,9 +148,9 @@
                             <span class="fw-bold">42.50</span> <!-- Example double -->
                         </li>
                     </ul>
-                </div>                
+                </div>
             </aside>
-        
+
 
             <!-- Main Content -->
             <main class="col-md-10">
@@ -131,27 +169,28 @@
                             <i class="bi bi-calendar-range me-2"></i>
                             My Schedule
                         </h4>
-                         <!-- Dropdown -->
+                        <!-- Dropdown -->
                         <div class="dropdown">
-                            <button class="btn p-0 border-0 bg-transparent" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                              <i class="bi bi-three-dots"></i>
+                            <button class="btn p-0 border-0 bg-transparent shadow-none" type="button"
+                                id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-three-dots me-2"></i>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
-                              <li>
-                                <a class="dropdown-item" href="#" onclick="printPage()">
-                                    <i class="bi bi-printer me-2"></i>
-                                    Print
-                                </a>
-                              </li>
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="printPage()">
+                                        <i class="bi bi-printer me-2"></i>
+                                        Print
+                                    </a>
+                                </li>
                             </ul>
-                        </div>  
+                        </div>
                     </header>
                     <hr>
                     <div class="schedule-grid">
                         <div class="empty-cell"></div>
                         {% for hour in range(7, 18) %}
                         <div class="time-label">{{ hour if hour < 13 else (hour%12) }}{{ 'AM' if hour < 12 else 'PM'
-                        }}</div>
+                                }}</div>
                                 {% endfor %}
                                 {% for day in ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday",
                                 "Sunday"]
@@ -172,17 +211,21 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
             <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
-        
-            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+
+            <a href="/"
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
             </a>
-        
+
             <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
             </ul>
         </footer>
     </div>
     <script src="{{ url_for('static', filename='schedule.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
