Clipped Notifications Hot-Fix - Altered shadow to remove sides w/o clip path - Fixed Notifications visual bug from clip path

--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <div class="container">
         <header class="d-flex align-items-center justify-content-between py-2 mb-3 border-bottom"
-            style="box-shadow: 0 .125rem .25rem rgba(0, 0, 0, 0.075); clip-path: inset(0 0 -.5rem 0);">
+            style="box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.05);">
             <div class="d-flex align-items-center col-md-6">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none me-3">
                     <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
