--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -159,11 +159,13 @@
                 <div class="p-3 bg-light border rounded shadow-sm">
                     <header class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center ms-2">
-                            <button type="button" id="prevWeek" class="btn p-0 me-2">
+                            <button type="button" id="prevWeek" class="btn p-0 me-2 shadow-none" onclick=updateWeek(-1)>
                                 <i class="bi bi-chevron-left"></i>
                             </button>
-                            <input type="week" id="availabilityDate" name="availabilityDate" class="ms-2 me-2">
-                            <button type="button" id="nextWeek" class="btn p-0 ms-2">
+                            <form id="scheduleForm">
+                                <input type="week" id="scheduleDate" name="scheduleDate" class="ms-2 me-2">
+                            </form>
+                            <button type="button" id="nextWeek" class="btn p-0 ms-2 shadow-none" onclick=updateWeek(1)>
                                 <i class="bi bi-chevron-right"></i>
                             </button>
                         </div>
@@ -199,9 +201,7 @@
                                 %}
                                 <div class="day-label">{{ day }}</div>
                                 {% for hour in range(7, 18) %}
-                                <div
-                                    class="cell {% for shift in shifts if shift.day == day and shift.start_hour <= hour < shift.end_hour %}shift-cell{% endfor %}">
-                                </div>
+                                <div class="cell" id="cell-{{ day }}-{{ hour }}"></div>
                                 {% endfor %}
                                 {% endfor %}
                         </div>
