--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -211,8 +211,11 @@
         </div>
     </div>
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
-            <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top"
+            style="box-shadow: 0 -8px 4px -4px rgba(0, 0, 0, 0.05);">
+            <ul class="nav col-md-4 justify-content-start">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">© 2024 Mary Low Coffeehouse</a></li>
+            </ul>
 
             <a href="/"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -220,7 +223,7 @@
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">About Us</a></li>
             </ul>
         </footer>
     </div>
