--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -216,17 +216,22 @@
         </div>
     </div>
     <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
-    
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
-        </a>
-    
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
-        </ul>
-    </footer>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top"
+            style="box-shadow: 0 -8px 4px -4px rgba(0, 0, 0, 0.05);">
+            <ul class="nav col-md-4 justify-content-start">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">© 2024 Mary Low Coffeehouse</a></li>
+            </ul>
+
+            <a href="/"
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
+            </a>
+
+            <ul class="nav col-md-4 justify-content-end">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">About Us</a></li>
+            </ul>
+        </footer>
+    </div>
 </div>
     <script src="{{ url_for('static', filename='availability.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
