Fixed Flash messages --Add necessary flash message to sign in and sign up --Fixed flash appearance

--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -44,7 +44,15 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+          <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Sign in</button>
+        <!-- Flash Message Section -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert alert-danger" role="alert">
+                    <strong>{{ messages[0] }}</strong> <!-- Show only the first message -->
+                </div>
+            {% endif %}
+        {% endwith %}
           <p class="mt-5 mb-3 text-muted">&copy; 2024–2025</p>
         </form>  
       </main>
