--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -42,7 +42,7 @@
     
           <div class="checkbox mb-3">
             <label>
-              <input type="checkbox" value="remember-me"> Remember me
+                <input type="checkbox" name="remember" value="remember-me"> Remember me
             </label>
           </div>
           <button class="w-100 btn btn-lg btn-primary shadow-sm" type="submit">Sign in</button>
