--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -141,11 +141,11 @@
                 <div class="p-3 bg-light border rounded shadow-sm">
                     <header class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center ms-2">
-                            <button type="button" id="prevWeek" class="btn p-0 me-2">
+                            <button type="button" id="prevWeek" class="btn p-0 me-2 shadow-none" onclick=updateWeek(-1)>
                                 <i class="bi bi-chevron-left"></i>
                             </button>
                             <input type="week" id="availabilityDate" name="availabilityDate" class="ms-2 me-2">
-                            <button type="button" id="nextWeek" class="btn p-0 ms-2">
+                            <button type="button" id="nextWeek" class="btn p-0 ms-2 shadow-none" onclick=updateWeek(1)>
                                 <i class="bi bi-chevron-right"></i>
                             </button>
                         </div>
