--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -27,10 +27,9 @@
                 <!-- Navigation Buttons -->
                 <ul class="nav">
                     <li>
-                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-dark">
+                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-secondary">
                             <i class="bi bi-check2-circle"></i>
                             Availability
-                            <i class="bi bi-dot dot-icon"></i>
                         </a>
                     </li>
                     <li>
@@ -40,9 +39,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ url_for('main.events') }}" class="nav-link px-2 text-secondary">
+                        <a href="{{ url_for('main.events') }}" class="nav-link px-2 text-dark">
                             <i class="bi bi-gift me-1"></i>
                             Events
+                            <i class="bi bi-dot dot-icon"></i>
                         </a>
                     </li>
                 </ul>
@@ -228,7 +228,7 @@
         </ul>
     </footer>
 </div>
-    <script src="{{ url_for('static', filename='availability.js') }}"></script>
+    <script src="{{ url_for('static', filename='events.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
