--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">
+                        <a href="{{ url_for('main.events') }}" class="nav-link px-2 text-secondary">
                             <i class="bi bi-gift me-1"></i>
                             Events
                         </a>
