--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -151,7 +151,7 @@
                         </div>
                         <h4 class="text-center m-0">
                             <i class="bi bi-check2-circle me-2"></i>
-                            My Availability
+                            Events
                         </h4>
                          <!-- Dropdown -->
                          <div class="dropdown">
