Added weekly wage and hours calculation -- Weekly wage -> employee hourly * hours -- Hours -> shifts length (handles overlap and duplicates) -- Added hourly to profile info

--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -94,8 +94,8 @@
                         <li class="dropdown-divider mt-0"></li>
                         <!-- Employee Info Section -->
                         <li class="px-3">
-                            <p class="mb-1"><strong>Name:</strong> {{fname}} {{lname}} </p>
-                            <p class="mb-1"><strong>Hourly:</strong> </p>
+                            <p class="mb-1"><strong>Name:</strong> {{fname}} {{lname}}</p>
+                            <p class="mb-1"><strong>Hourly:</strong> ${{ '{:.2f}'.format(wage) }}</p>
                         </li>
                         <li class="dropdown-divider"></li>
                         <!-- Logout Button -->
