--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -94,8 +94,8 @@
                         <li class="dropdown-divider mt-0"></li>
                         <!-- Employee Info Section -->
                         <li class="px-3">
-                            <p class="mb-1"><strong>Name:</strong> {{fname}} {{lname}} </p>
-                            <p class="mb-1"><strong>Hourly:</strong> </p>
+                            <p class="mb-1"><strong>Name:</strong> {{fname}} {{lname}}</p>
+                            <p class="mb-1"><strong>Hourly:</strong> ${{ '{:.2f}'.format(wage) }}</p>
                         </li>
                         <li class="dropdown-divider"></li>
                         <!-- Logout Button -->
@@ -157,14 +157,14 @@
                                 <i class="bi bi-coin"></i>
                                 Wages:
                             </span>
-                            <span class="fw-bold">$1234.56</span> <!-- Example double -->
+                            <span class="fw-bold" id="totalWage">{{ wage }}</span>
                         </li>
                         <li class="d-flex justify-content-between align-items-center py-2">
                             <span>
                                 <i class="bi bi-clock me-1"></i>
                                 Hours:
                             </span>
-                            <span class="fw-bold">42.50</span> <!-- Example double -->
+                            <span class="fw-bold" id="totalHours"></span>
                         </li>
                     </ul>
                 </div>
