--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -224,7 +224,7 @@
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+            <li class="nav-item"><a href="https://github.com/ryanmogauro/Scheduling-Project" class="nav-link px-2 text-secondary" target="_blank" rel="noopener noreferrer">About Us</a></li>
         </ul>
     </footer>
 </div>
