Added notification loading, clearing, and marking --Created UI for notifications w/ messsage, read status, and timestamp --Added endpoint for clearing notification in DB --Added endpoint for marking notifcations as read in DB --Added endpoint for loading notifications

--- a/website/static/schedule.css
+++ b/website/static/schedule.css
@@ -31,6 +31,10 @@ body h5 {
     display: block; /* Visible only when the list has items */
 }
 
+.timestamp {
+    font-size: 0.6rem;
+}
+
 .nav-link {
     position: relative;
 }
