Fixed Naming Conventions in db -- Fixed migration w/ merge -- Removed createdBy, eventStartDate, eventStartDate, and sendDate -- Converted "Date" to "Time" for naming convention -- Converted all refs to sendDate to sendTime

--- a/website/templates/notifications.html
+++ b/website/templates/notifications.html
@@ -37,7 +37,7 @@
                         <td>${notification.employeeID}</td>
                         <td>${notification.message}</td>
                         <td>${notification.hasRead ? 'Yes' : 'No'}</td>
-                        <td>${notification.sendDate}</td>
+                        <td>${notification.sendTime}</td>
                     `;
                     tableBody.appendChild(row);
                 });
