--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -27,7 +27,7 @@
                 <!-- Navigation Buttons -->
                 <ul class="nav">
                     <li>
-                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-secondary">
+                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-secondary">
                             <i class="bi bi-check2-circle"></i>
                             Availability
                         </a>
